more z-index fix
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@33283 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_PageHeader.scss
+++ b/skins/oasis/css/core/_PageHeader.scss
@@ -2,7 +2,7 @@
 	clear: both;
 	margin: 0 10px 10px 10px;
 	position: relative;
-	z-index: 1; //ie7 requirement
+	z-index: 2; //ie7 requirement
 	&.separator {
 		border-bottom: 1px solid $color-page-border;
 		padding: 0 0 15px 0;
