--- a/skins/oasis/css/core/_page.scss
+++ b/skins/oasis/css/core/_page.scss
@@ -13,7 +13,9 @@
 
 .WikiaMainContent {
 	float: left;
+	position: relative;
 	width: $width-outside - 320px;
+	z-index: 1;
 	// one column layout (no right rail)
 	.oasis-one-column & {
 		width: $width-outside;
